# diogenes

./: (same as "user" config, ignored)  .gitattributes  .gitignore  .llxprtignore  AGENTS.md  BRAIN.md  CLAUDE.md  DIOGENES_EXPORT_MANIFEST.md  DIOGENES_RESTORE.md  DIOGENES_SANITIZED_MIRROR_MANIFEST.json  LLXPRT.md  OFFICIAL_ONTOLOGY.json  OPUS_BRIEFING.md  README.md  TOPOLOGY.md  check_diogenes.sh  claw  demo  llxprt2501  mudcrab  pytest.ini  requirements-runtime.txt
.llxprt/: settings.json
00_PROJECT_BRAIN/: ACTIVE_INSTRUCTION_INDEX.md  ALGO_MANIFEST.md  ANTI_SLOP_AUDIT.md  BLUEPRINT_FIRST_MODEL_SECOND_PSEUDOLAW.md  BUILD_PLAN_AUDIT.md  BUILD_STATE.md  CANONICAL_FINISHED_PRODUCT_MAP.md  CODEX_PROMPTING_GUIDE_LUCIDOTA_POLICY.json  CODEX_PROMPTING_GUIDE_LUCIDOTA_POLICY.md  DECISIONS.md  DIOGENES_MASTER_ROADMAP.md  DIOGENES_OPERATIONAL_SPEC.md  DOYOURJOB  DURABLE_WORKFLOW_DECISION.json  ENGINEER_RESPONSE.md  FILESYSTEM_TREE_INDEX_CURRENT.md  GLOSSARY.md  GOALS.md  GONN_CANON.md  INDY_MODEL_STACK.md  INDY_READS_RUNTIME_CONTRACT.md  INDY_SOUL.md  KANT69_ARCHITECTURE_CONVERGENCE_CANON.md  KARPATHY_GBRAIN_LLMWIKI.md  LOCAL_READS_RUNTIME_CONTRACT.md  LUCIDOTA_CANONICAL_MANIFEST.md  LUCIDOTA_GAPS_ACTION_WORKFLOWS.md  LUCIDOTA_OPS_MANUAL.md  MISTRAL_RATE_LIMITS.md  MODEL_REGISTRY.md  OPEN_QUESTIONS.md  OPERATOR_LAW.md  PHANTOM_INTEGRATION_DESIGN.md  POSTGRES_AUDIT_CURRENT.md  PROJECT_2501_ADMIN_PROMPT.md  PROJECT_2501_CORE_CONTRACT.md  README.md  READTHISFIRST_CURRENT.md  RUST_ETL_CRATES.md  RUVECTOR_ABSURD_SONA_RIVERML_NOTES.md  (+18 more)
01_REPOS/: README.md
01_REPOS/claudecode/rust/crates/claw-cli/: Cargo.toml  build.rs
01_REPOS/claudecode/rust/crates/claw-cli/proto/: kernel.proto
01_REPOS/claudecode/rust/crates/claw-cli/src/: input.rs  main.rs  render.rs
01_REPOS/claudecode/rust/crates/runtime/: Cargo.toml
01_REPOS/claudecode/rust/crates/runtime/src/: permissions.rs  sandbox.rs
01_REPOS/needle/: .gitignore  LICENSE  README.md  launch_train.sh  pyproject.toml  requirements.txt  setup
01_REPOS/needle/docs/: hf_config.json  hf_model_card.md  simple_attention_networks.md  tpu.md
01_REPOS/needle/needle/: __init__.py  cli.py
01_REPOS/needle/needle/dataset/: __init__.py  dataset.py  generate.py  tokenize.py  tokenizer.py
01_REPOS/needle/needle/model/: __init__.py  architecture.py  constrained.py  export.py  quantize.py  run.py
01_REPOS/needle/needle/training/: __init__.py  eval.py  finetune.py  optim.py  pretrain.py  train.py
01_REPOS/needle/needle/ui/: server.py
01_REPOS/needle/needle/ui/static/: app.js  index.html  style.css
01_REPOS/needle/needle/utils/: __init__.py  distributed.py  gcs.py  tpu.py
02_RECORDS_OFFICE/: ADVERSARIAL_AUDIT_2026_05_13.md  ALGORITHMS_IN_NATURE_PRIMITIVES.md  AUTH_INVENTORY.md  BODY_CAPTURE_VISUAL_CHANNEL_DESIGN.md  BODY_CAPTURE_WATCHER_LAW.md  CHELYDRA_ALGO_PRIMITIVES.md  CLAUDECODE_FORK.md  CUDA_MODEL_STACK_V0.md  CYBERSECURITY_RISK_REGISTER.md  DBOS_POSTGRES_TOPOLOGY.md  DIOGENES_BLOCKOUT_V02_RECONCILIATION.md  DRIVE_MAP_STATUS.md  DRIVE_TARGETS_ALGORITHMS_INTAKE.md  DRIVE_WRITE_POLICY.md  HYDRA_WATCHER_LAW.md  (+12 more)
(+14088 files in other folders)
