[package]
name = "claw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "claw"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
crossterm = "0.28"
prost = "0.14.3"
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-prost = "0.14.6"
tools = { path = "../tools" }

[build-dependencies]
tonic-prost-build = "0.14.6"

[lints]
workspace = true
